# anki-ai-slop

./: .gitignore  README.md  VOCABULARY_PIPELINE_OPTIMIZATION_TODO.md  config-prod.yaml  config.yaml  pyproject.toml
.aiassistant/rules/: AI_PROJECT_GUIDELINES.md
data/: phrasal_verbs.csv
src/anki/: __init__.py  __main__.py  config_models.py
src/anki/anki_sync/: __init__.py  anki_connect.py  vocabulary_improved.py
src/anki/anki_sync/vocabulary_improved_templates/: english_russian_back.html  english_russian_front.html  fields.txt  russian_english_back.html  russian_english_front.html  styles.css
src/anki/common/: __init__.py  llm.py  logging_config.py  observability.py  reliability.py  tts.py
src/anki/lemmatizer/: __init__.py  lemma_extractor.py  phrasal_verb_processor.py  text_processor.py
src/anki/lemmatizer_to_anki/: chains.py  models.py  validators.py
src/anki/lemmatizer_to_anki/prompts/: translation_human.txt  translation_system.txt  word_translation_system.txt
src/anki/obsidian_to_anki/: __init__.py  chains.py  models.py  validators.py
src/anki/obsidian_to_anki/prompts/: anki_card_rules.shared.txt
src/anki/obsidian_to_anki/prompts/steps/: 1_generate_deck.human.txt  1_generate_deck.system.txt  2_review_deck.human.txt  2_review_deck.system.txt
src/anki/pipelines/obsidian/: __init__.py  chains.py  models.py  prompts.py  validators.py
src/anki/pipelines/vocabulary/: __init__.py  chains.py  models.py  prompts.py  validators.py
src/docling_tools/: __main__.py  pdf_to_markdown.py  run.py
src/mistral_ocr/: __init__.py  __main__.py  config_models.py  pdf_to_markdown.py  run.py
src/pv_pdf_to_csv/: __init__.py  __main__.py  converter.py  run.py
src/subs/: __init__.py  __main__.py  reader.py  run.py
src/to_md/: __init__.py  __main__.py  pdf_to_markdown.py
(+18 files in other folders)
