[project]
name = "anki-ai-slop"
version = "0.1.0"
description = "AI utilites to simplifiy some anki interactions"
requires-python = ">=3.13"
dependencies = [
  "hatchling>=1.18",
  "langchain==0.3.27",
  "langchain-community==0.3.30",
  "langchain-google-genai==2.1.12",
  "pydantic==2.11.10",
  "pyyaml==6.0.3",
  "Pillow>=10.0.0",
  "mistralai>=1.0.0",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki", "src/mistral_ocr"]
