[project]
name = "anki-ai-slop"
version = "0.1.0"
description = "AI utilites to simplifiy some anki interactions"
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.18",
    "langchain==0.3.27",
    "langchain-community==0.3.30",
    "langchain-google-genai==2.1.12",
    "google-cloud-texttospeech>=2.31.0",
    "pydantic==2.11.10",
    "pyyaml==6.0.3",
    "Pillow>=10.0.0",
    "mistralai>=1.0.0",
    "spacy>=3.8.7",
    "spacy-curated-transformers>=0.3.0",
    "PyPDF2>=3.0.0",
    "pysrt>=1.1.0",
    "en-core-web-trf>=3.8.0",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki", "src/mistral_ocr", "src/lemmatizer", "src/pv_pdf_to_csv", "src/subs", "src/anki/pipelines"]

[tool.hatch.build.targets.wheel.shared-data]
"src/lemmatizer/phrasal_verbs.csv" = "share/lemmatizer/phrasal_verbs.csv"

[tool.uv.sources]
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl" }
